tree-sitter-sqlpygen/test/corpus/query1.txt
==============
Schema + Query
==============

module example1

schema table_stocks
CREATE TABLE stocks (
    date text,
    trans text,
    symbol text,
    qty real,
    price real
) ;


query insert_into_stocks(date: str!, trans: str!, symbol: str!, qty: float!, price: float!)
INSERT INTO stocks VALUES ($date, $trans, $symbol, $qty, $price) ;

---

(source_file
    (module_stmt (identifier))
    (schema_fn (identifier) (schema_sql))
    (query_fn
        (identifier)
        (fields
            (field (identifier) (non_nullable_type (identifier)))
            (field (identifier) (non_nullable_type (identifier)))
            (field (identifier) (non_nullable_type (identifier)))
            (field (identifier) (non_nullable_type (identifier)))
            (field (identifier) (non_nullable_type (identifier)))
        )
        (query_sql))
)
