tree-sitter-sqlpygen/test/corpus/query3.txt
===========================
Query returning anon table
===========================

module example1

schema table_stocks
CREATE TABLE stocks (
    date text,
    trans text,
    symbol text,
    qty real,
    price real
) ;


query select_from_stocks() -> (date: str, trans: str, symbol: str, qty: float, price: float)
SELECT * FROM stocks ;

---

(source_file
    (module_stmt (identifier))
    (schema_fn (identifier) (schema_sql))
    (query_fn
        (identifier)
        (fields)
        (return_
            (anon_table
                (fields
                    (field (identifier) (nullable_type (identifier)))
                    (field (identifier) (nullable_type (identifier)))
                    (field (identifier) (nullable_type (identifier)))
                    (field (identifier) (nullable_type (identifier)))
                    (field (identifier) (nullable_type (identifier)))
                )
            )
        )
        (query_sql)
    )
)
