tree-sitter-sqlpygen/test/corpus/schema1.txt
============
Schema Lower
============

module example1

schema table_stocks
create table stocks (
    date text,
    trans text,
    symbol text,
    qty real,
    price real
) ;


---

(source_file
    (module_stmt (identifier))
    (schema_fn (identifier) (schema_sql))
)
