tree-sitter-sqlpygen/test/corpus/schema2.txt
============
Schema Upper
============

module example1

schema table_stocks
CREATE TABLE stocks (
    date text,
    trans text,
    symbol text,
    qty real,
    price real
) ;


---

(source_file
    (module_stmt (identifier))
    (schema_fn (identifier) (schema_sql))
)

